update-alunos.html
ainda falta terminar o restante das ultimas aulas

--- a/main/templates/main/alunos.html
+++ b/main/templates/main/alunos.html
@@ -1,9 +1,11 @@
-{% extends 'base.html' %}
+{%extends 'base.html'%}
 
 {% block content %}
 
     <div class="container">
         <h1>Lista de Alunos</h1>
+        <!-- Botão para adicionar novo aluno -->
+        <a href="{% url 'aluno-create' %}" class="btn btn-primary mb-3">Adicionar Aluno</a> 
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -15,17 +17,18 @@
             <tbody>
                 {% for aluno in alunos_list %}
                     <tr>
-                        <td>{{ aluno.nome }}</td>
+                        <td><a href="/alunoID/{{aluno.id}}">{{ aluno.nome }}</td>
                         <td>{{ aluno.email }}</td>
                         <td>{{ aluno.telefone }}</td>
+                        <td><a href="/aluno/{{aluno.id}}/update/"><span><i class="fas fa-edit"></i></span></td>
+                        <td><a href="/delete/{{aluno.id}}"><span><i class="fas fa-trash"></i></span></td>
                     </tr>
-                {% empty %}
-                    <tr>
-                        <td colspan="4">Nenhum aluno encontrado.</td>
-                    </tr>
-                    {% endfor %}
+            {% empty %}
+                <tr>
+                    <td colspan="4">nenhum aluno encontrado.</td>
+                </tr>
+            {% endfor %}
             </tbody>
         </table>
     </div>
-
 {% endblock %}
