--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -17,7 +17,7 @@
             <ul>
                 <a class="navbar-brand" href="/">
                     <i class="fa fa-rocket" aria-hidden="true"></i>
-                    <span style="font-weight:bold;color:#333">Aluguma escola ai...</span>
+                    <span style="font-weight:bold;color:#333">Fuctura escola...</span>
                 </a>
                   
             </ul>
