--- a/main/templates/main/professor.html
+++ b/main/templates/main/professor.html
@@ -1,13 +1,15 @@
-{% extends "base.html" %}
+{%extends 'base.html'%}
 
 {% block content %}
 
     <div class="container">
-        <h1>Lista de Professor</h1>
+        <h1>Lista de Professores</h1>
+        <!-- Botão para adicionar novo aluno -->
+        <a href="{% url 'professor-create' %}" class="btn btn-primary mb-3">Adicionar Professor</a> 
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th scope="col">Professor</th>
+                    <th scope="col">Aluno</th>
                     <th scope="col">Email</th>
                     <th scope="col">Telefone</th>
                 </tr>
@@ -15,17 +17,18 @@
             <tbody>
                 {% for professor in professor_list %}
                     <tr>
-                        <td>{{ professor.nome_professor }}</td>
+                        <td><a href="/professorID/{{professor.id}}">{{ professor.nome_professor }}</td>
                         <td>{{ professor.email_professor }}</td>
                         <td>{{ professor.telefone_professor }}</td>
+                        <td><a href="/professor/{{professor.id}}/update/"><span><i class="fas fa-edit"></i></span></td>
+                        <td><a href="/delete/{{professor.id}}"><span><i class="fas fa-trash"></i></span></td>
                     </tr>
-                {% empty %}
-                    <tr>
-                        <td colspan="4">Nenhum Professor encontrado.</td>
-                    </tr>
-                    {% endfor %}
+            {% empty %}
+                <tr>
+                    <td colspan="4">nenhum professor encontrado.</td>
+                </tr>
+            {% endfor %}
             </tbody>
         </table>
     </div>
-
 {% endblock %}
