--- a/main/templates/main/professorID.html
+++ b/main/templates/main/professorID.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="container">
-    <h1> {{ professor.nome }} </h1>
+    <h1> {{ professor.nome_professor }} </h1>
     <p> {{ professor.disciplina }} </p>
 </div>
 
